<resources>
    <string name="app_name">Test_LoadMore</string>
    <string name="dlg_yes">yes</string>
    <string name="dlg_no">no</string>
    <string name="permission_tip">"This function requires %s permission, otherwise it cannot be used normally. Do you want to open the settings?"</string>
    <string name="text_alert_ok">OK</string>

    <string name="tv_show_lock">Show Locked File</string>
    <string name="tv_favorite">Favorite</string>
    <string name="tv_main">All WallPaper</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tv_top_find">Find your choice</string>
    <string name="tv_top_you">For you</string>
    <string name="tv_viewAll">View All</string>
    <string name="tv_top_trending">Trending Wallpapers</string>


    <string name="recipe_title_preview">this is the recipe name</string>
    <string name="recipe">Recipes</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_recipe_details">Recipe Details</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="search_error">there is no such addon name</string>

    <string name="tv4DWallPaper">4D Wallpaper</string>
    <string name="tvLiveWallPaper">Live WallPaper</string>
    <string name="tv4KWallPaper">4K WallPaper</string>
    <string name="tvCategories">Categories</string>

    <string name="tvDetailReport">Report</string>
    <string name="tvDetailShare">Share</string>
    <string name="tvDetailPreview">Preview</string>
    <string name="tvDetailAbstract">Abstract</string>
    <string name="tvDetailSetWallPP">Set as Wallpaper</string>

    <string name="tvHintSearch">Search by text</string>
    <string name="tvSearchEmpty">No data available for this work. Try somehting else</string>


    <string name="tvShowingPreview">Showing Preview</string>
    <string name="tvReportID">Report Item ID: </string>
    <string name="tvReportSexual">Sexually Explicit</string>
    <string name="tvReporOffensive">Offensive</string>
    <string name="tvReportCopyrighted">Copyrighted</string>
    <string name="contentReportSexual">Please briefly explain why you found it Sexually Explicit</string>
    <string name="contentReportOffensive">Please briefly explain why you found it Offensive</string>
    <string name="contentReportCopyrighted">Please briefly explain why you found it Copyrighted</string>

    <string name="tvMyFavorite">My Favorite</string>
    <string name="tvMyDownLoad">My DownLoad</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>