<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.test_loadmore.ui.component.detail.image.DetailImageViewModel" />
    </data>

    <RelativeLayout
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.component.detail.image.DetailImageFragment">

        <ImageView
            android:id="@+id/imgDetailImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter" />

        <RelativeLayout
            android:id="@+id/layoutDetailImageBack"
            android:background="@drawable/bg_detail_round_small"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_width="60dp"
            android:layout_height="60dp">
            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_detail_back"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/btnDetailFavorite"
            android:background="@drawable/bg_detail_round_small"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"
            android:layout_width="60dp"
            android:layout_height="60dp">
            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_detail_unfavorite"
                />
        </RelativeLayout>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/btnMenuDetail"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp">

            <com.github.clans.fab.FloatingActionButton
                app:backgroundTint="@color/colorBgDetail"
                android:src="@drawable/ic_detail_setwpp"
                android:id="@+id/btnDetailSetWpp"
                fab:fab_size="mini"
                fab:fab_label="@string/tvDetailSetWallPP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <com.github.clans.fab.FloatingActionButton
                app:backgroundTint="@color/colorBgDetail"
                android:id="@+id/btnDetailCategory"
                fab:fab_size="mini"
                fab:fab_label="@string/tvDetailAbstract"
                android:src="@drawable/ic_detail_abstract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <com.github.clans.fab.FloatingActionButton
                app:backgroundTint="@color/colorBgDetail"
                android:id="@+id/btnDetailPreview"
                fab:fab_label="@string/tvDetailPreview"
                fab:fab_size="mini"
                android:src="@drawable/ic_detail_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <com.github.clans.fab.FloatingActionButton
                app:backgroundTint="@color/colorBgDetail"
                android:id="@+id/btnDetailShare"
                app:fab_size="mini"
                fab:fab_label="@string/tvDetailShare"
                android:src="@drawable/ic_detail_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <com.github.clans.fab.FloatingActionButton
                app:backgroundTint="@color/colorBgDetail"
                android:id="@+id/btnDetailReport"
                app:fab_size="mini"
                android:src="@drawable/ic_detail_report"
                fab:fab_label="@string/tvDetailReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </com.github.clans.fab.FloatingActionMenu>

        <RelativeLayout
            android:id="@+id/btnDetailDownLoad"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_detail_round_big"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:layout_width="100dp"
            android:layout_height="100dp">
            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_detail_download"
                />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/pbDetailImage"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="#FFFFFF"
            />

    </RelativeLayout>
</layout>