<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:id="@+id/tvReportID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvReportIDs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="Report Item ID: "
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/ripple_select_dialog"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/tvReportSexually"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvReportID"

            android:layout_marginTop="10dp">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvReportSexual"
                android:textColor="#000000"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/ripple_select_dialog"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/tvReportOffensive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvReportSexually"

            android:layout_marginTop="15dp">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvReporOffensive"
                android:textColor="#000000"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/ripple_select_dialog"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tvReportCopyRighted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvReportOffensive">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvReportCopyrighted"
                android:textColor="#000000"
                android:textSize="22sp" />
        </LinearLayout>


        <Button
            android:id="@+id/btnCancelReport"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvReportCopyRighted"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:textSize="16sp" />
    </RelativeLayout>
</RelativeLayout>