<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#E6F6FFA2" />

        <LinearLayout
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/layoutTopToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal"
            android:paddingTop="7dp"
            android:paddingBottom="7dp">

            <ImageButton
                android:id="@+id/btnTopMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:padding="3dp"
                android:src="@drawable/ic_main_menu" />

            <LinearLayout
                android:id="@+id/layoutSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_top_search"
                android:padding="3dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_top_find" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/font2"
                    android:gravity="center"
                    android:hint="@string/tv_top_find"
                    android:textColor="@color/textColor"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swrTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutTopToolBar"
            >

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nstTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/vpgTopCategories"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_marginTop="5dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp">

                        <LinearLayout
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:layout_centerVertical="true"
                            android:background="@color/ic_item_menu_main" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="8dp"
                            android:fontFamily="@font/font2"
                            android:text="@string/tv_top_you"
                            android:textColor="@color/textColor"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvYouViewAll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="4dp"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/tv_viewAll"
                            android:textColor="#00CCFF"
                            android:textSize="17sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rcclvForYou"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <ProgressBar
                            android:id="@+id/pbTopForYou"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp">

                        <LinearLayout
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:layout_centerVertical="true"
                            android:background="@color/ic_item_menu_main" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="8dp"
                            android:fontFamily="@font/font2"
                            android:text="@string/tv_top_trending"
                            android:textColor="@color/textColor"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        >

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rcclvTrending"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <ProgressBar
                            android:id="@+id/pbTopTrending"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true" />
                    </RelativeLayout>

                    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"

                        android:id="@+id/pbTop"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        app:mpb_progressStyle="horizontal" />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </RelativeLayout>
</layout>